--- a/packages/subgraph/package.json
+++ b/packages/subgraph/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "@graphprotocol/graph-cli": "0.53.0",
     "@graphprotocol/graph-ts": "0.28.0",
-    "mustache": "^4.2.0"
+    "mustache": "^4.2.0",
+    "rimraf": "^6.0.1"
   },
   "devDependencies": {
     "prettier": "^3.0.3"
